Homepage works w/o error

--- a/bongo/apps/frontend/assets/scss/_fonts.scss
+++ b/bongo/apps/frontend/assets/scss/_fonts.scss
@@ -1,34 +1,34 @@
 @font-face {
     font-family: 'MinionPro';
-    src: url('fonts/minionpro.woff') format('woff');
+    src: url('../fonts/minionpro.woff') format('woff');
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: 'MyriadPro';
-    src: url('fonts/myriadpro-regular.woff') format('woff');
+    src: url('../fonts/myriadpro-regular.woff') format('woff');
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
     font-family: 'MyriadPro';
-    src: url('fonts/myriadpro-bold.woff') format('woff');
+    src: url('../fonts/myriadpro-bold.woff') format('woff');
     font-style: bold;
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'MyriadPro';
-    src: url('fonts/myriadpro-bold-cond.woff') format('woff');
+    src: url('../fonts/myriadpro-bold-cond.woff') format('woff');
     font-style: bold;
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'MyriadPro';
-    src: url('fonts/myriadpro-semibold.woff') format('woff');
+    src: url('../fonts/myriadpro-semibold.woff') format('woff');
     font-style: bold;
     font-weight: 300;
 }
