--- a/bongo/apps/frontend/templates/pages/home.html
+++ b/bongo/apps/frontend/templates/pages/home.html
@@ -3,31 +3,33 @@
 {% block content %}
 
     <div class="deck">
-        <div class="story lead"></div>
-        <div class="story second" id="n1"></div>
-        <div class="story second" id="n2"></div>
-        <div class="story thumb" id="n1"></div>
-        <div class="story anchor"></div>
-        <div class="story thumb" id="n2"></div>
+        <div class="story lead">{{news.title}}</div>
+        <div class="story second" id="n1">{{features.title}}</div>
+        <div class="story second" id="n2">{{artsent.title}}</div>
+        <div class="story thumb" id="n1">{{op1.title}}</div>
+        <div class="story anchor">{{sports.title}}</div>
+        <div class="story thumb" id="n2">{{op2.title}}</div>
     </div>
 
     <div class="top-reads">
-        <div class="top-article" ng-repeat="article in popular track by $index" ng-click="goto('/article/'+article.id)">
-            <div class="top-badge {{article.section.classname}}">
-                {% for article in toplist %}
+        {% for article in toplist %}
+            <div class="top-article">
+                <div class="top-badge {{article.section.classname}}">
                     <span class="index">{{forloop.counter}}</span>
-                {% endfor %}
+                </div>
+                <a class="top-title" href="/article/{{article.pk}}">{{article.title}}</a>
             </div>
-            <h3 class="top-title">{{article.title}}</h3>
-        </div>
+        {% endfor %}
     </div>
 
     <div class="homepage-content">
         <div class="left-col">
-            <section ng-repeat="section in sections">
-                <h2>{{section.section}}</h2>
-                <h3>{{section.posts}}</h3>
-            </section>
+            {% for section in sections %}
+                <section>
+                    <h2>{{section.section}}</h2>
+                    <h3>{{section.posts}}</h3>
+                </section>
+            {% endfor %}
         </div>
         <div class="right-col">
             {# twitter #}
