--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -64,7 +64,8 @@
             <script type="text/javascript" src="{% static 'zepto/zepto.js' %}"></script>
             <script type="text/javascript" src="{% static 'js/watch.js' %}"></script>
             {# <script type="text/javascript" src="/static/js/orient.js"> #}
-            {% block extrajs %}{% endblock %}
+            {% block extrajs %}
+            {% endblock %}
         {% endcompress %}
     </body>
 </html>
