Lots of small fixes. Finally have Scribd thumbnails working.

--- a/bongo/apps/frontend/assets/scss/components/_disqus.scss
+++ b/bongo/apps/frontend/assets/scss/components/_disqus.scss
@@ -19,7 +19,7 @@
 
     .disqus-comment {
         font-family:"MyriadPro";
-        font-weight:1.2em;
+        font-size:1.2em;
 
         word-break:break-all;
         word-wrap:normal;
