--- a/bongo/apps/frontend/assets/scss/main.scss
+++ b/bongo/apps/frontend/assets/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'fonts';
 @import 'mixins';
-@import 'grids';
 @import 'overrides';
 @import 'responsive';
 @import 'colors';
@@ -13,3 +12,4 @@
 @import 'components/deck';
 @import 'components/errors';
 @import 'components/disqus';
+@import 'components/scribd';
