--- a/bongo/apps/frontend/assets/scss/pages/_home.scss
+++ b/bongo/apps/frontend/assets/scss/pages/_home.scss
@@ -56,6 +56,9 @@
                     left:-12px;
                 }
             }
+            .top-title {
+                text-decoration:underline;
+            }
         }
 
         .top-title {
