--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -5,6 +5,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
         <base href="/">
         {% block title %}
             <title>The Bowdoin Orient</title>
