Standardize on 'Arts & Entertainment'

--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -27,7 +27,7 @@
                     <div class="sections">
                         <span class="news">News</span>
                         <span class="features">Features</span>
-                        <span class="artsent">Arts and Entertainment</span>
+                        <span class="artsent">Arts & Entertainment</span>
                         <span class="sports">Sports</span>
                         <span class="opinion">Opinion</span>
                     </div>
