--- a/bongo/apps/frontend/assets/scss/components/_disqus.scss
+++ b/bongo/apps/frontend/assets/scss/components/_disqus.scss
@@ -6,14 +6,14 @@
     margin:10px 0;
 
     .dsq-widget-title {
-        font-family:"MinionPro";
-        font-size:1.4em;
+        font-family:"MyriadPro";
+        font-size:1.3em;
         text-transform: uppercase;
         padding-bottom:5px;
         border-bottom: 2px solid $lightergray;
 
         &:first-letter {
-            font-size:1.45em;
+            font-size:1.35em;
         }
     }
 
