--- a/bongo/apps/frontend/assets/scss/pages/_home.scss
+++ b/bongo/apps/frontend/assets/scss/pages/_home.scss
@@ -95,6 +95,11 @@
                     font-size:1.35em;
                 }
             }
+
+            .section-post {
+                display:block;
+                position:relative;
+            }
         }
     }
 
