--- a/ansible/roles/web/templates/newrelic.j2
+++ b/ansible/roles/web/templates/newrelic.j2
@@ -27,13 +27,13 @@
 # You must specify the license key associated with your New
 # Relic account. This key binds the Python Agent's data to your
 # account in the New Relic service.
-license_key = 2fe3ebd56a4d984c993024dabddc594b79ca179f
+license_key = {{ newrelic_key }}
 
 # The appplication name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
 # The UI will then auto-map instances of your application into a
 # entry on your home dashboard page.
-app_name = Bongo
+app_name = {{ application_name }}
 
 # When "true", the agent collects performance data about your
 # application and reports this data to the New Relic UI at
@@ -52,7 +52,7 @@ monitor_mode = true
 # write out a log file, it is also possible to say "stderr" and
 # output to standard error output. This would normally result in
 # output appearing in your web server log.
-log_file = stderr
+log_file = {{ virtualenv_path }}/logs/newrelic.log
 
 # Sets the level of detail of messages sent to the log file, if
 # a log file location has been provided. Possible values, in
