--- a/ansible/roles/web/templates/nginx.conf.j2
+++ b/ansible/roles/web/templates/nginx.conf.j2
@@ -25,6 +25,14 @@ http {
     default_type application/octet-stream;
 
     ##
+    # SSL Settings
+    ##
+
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'kEECDH+ECDSA+AES128 kEECDH+ECDSA+AES256 kEECDH+AES128 kEECDH+AES256 kEDH+AES128 kEDH+AES256 DES-CBC3-SHA +SHA !aNULL !eNULL !LOW !MD5 !EXP !DSS !PSK !SRP !kECDH !CAMELLIA !RC4 !SEED';
+
+    ##
     # Logging Settings
     ##
 
