--- a/ansible/roles/web/templates/nginx_site_config.j2
+++ b/ansible/roles/web/templates/nginx_site_config.j2
@@ -13,11 +13,12 @@ server {
 }
 
 server {
-    listen              443 default_server;
+    listen              443 default_server ssl spdy;
     server_name         {{ site_url }};
-	ssl on;
 	ssl_certificate     {{ ssl_dest_dir }}/{{ application_name }}.crt;
 	ssl_certificate_key {{ ssl_dest_dir }}/{{ application_name }}.key;
+
+    add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
 
     client_max_body_size 4G;
 
