Use Typekit font stack

--- a/bongo/apps/frontend/assets/scss/components/_basement-menu.scss
+++ b/bongo/apps/frontend/assets/scss/components/_basement-menu.scss
@@ -21,7 +21,7 @@
             height:80px;
             display:block;
 
-            font-family: "MyriadPro";
+            font-family: $myriad-stack;
             font-style: bold;
             font-weight: 700;
             font-size:1.2em;
