--- a/bongo/apps/frontend/assets/scss/components/_errors.scss
+++ b/bongo/apps/frontend/assets/scss/components/_errors.scss
@@ -2,7 +2,7 @@
     padding: 5px;
     border: 3px dashed $warning;
     color: $black;
-    font-family:"MyriadPro";
+    font-family:$myriad-stack;
     text-align:center;
     font-size:1.2em;
 
