--- a/bongo/apps/frontend/assets/scss/components/_header.scss
+++ b/bongo/apps/frontend/assets/scss/components/_header.scss
@@ -34,7 +34,7 @@ header {
                 float:left;
                 display:inline-block;
 
-                font-family: "MyriadPro";
+                font-family: $myriad-stack;
                 font-style: bold;
                 font-weight: 700;
                 font-size:1.53em;
