--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -15,7 +15,7 @@
         {% compress css %}
             <link type="text/x-scss" rel="stylesheet" href="{% static 'scss/main.scss' %}">
         {% endcompress %}
-        <script type="text/javascript" src="http://use.typekit.com/rmt0nbm.js"></script>
+        <script type="text/javascript" src="https:////use.typekit.com/rmt0nbm.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
