--- a/bongo/apps/frontend/templates/pages/home.html
+++ b/bongo/apps/frontend/templates/pages/home.html
@@ -74,7 +74,7 @@
             {# disqus #}
             <div class="dsq-widget">
                 <h2 class="dsq-widget-title">Recent Comments</h2>
-                <script type="text/javascript" src="http://disqus.com/forums/bowdoinorient/recent_comments_widget.js?num_items=8&hide_avatars=1&avatar_size=24&excerpt_length=140"></script>
+                <script type="text/javascript" src="https://disqus.com/forums/bowdoinorient/recent_comments_widget.js?num_items=8&hide_avatars=1&avatar_size=24&excerpt_length=140"></script>
             </div>
         </div>
     </div>
