--- a/ansible/roles/web/templates/nginx.conf.j2
+++ b/ansible/roles/web/templates/nginx.conf.j2
@@ -53,9 +53,6 @@ http {
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
-
     client_body_buffer_size 10K;
     client_header_buffer_size 1k;
     client_max_body_size 8m;
@@ -65,4 +62,9 @@ http {
     client_header_timeout 12;
     keepalive_timeout 15;
     send_timeout 10;
+
+    server_names_hash_bucket_size  64;
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
