--- a/ansible/roles/celery/templates/supervisor_celery.conf.j2
+++ b/ansible/roles/celery/templates/supervisor_celery.conf.j2
@@ -6,5 +6,5 @@ autorestart=true
 
 user={{ celery_user }}
 
-stdout_logfile=/var/log/celery/{{ celery_application_name }}.log
+stdout_logfile={{ virtualenv_path }}/logs/{{ celery_application_name }}.log
 redirect_stderr = true
