--- a/ansible/roles/celery/templates/supervisor_celeryflower.conf.j2
+++ b/ansible/roles/celery/templates/supervisor_celeryflower.conf.j2
@@ -6,5 +6,5 @@ autorestart=true
 
 user={{ celery_user }}
 
-stdout_logfile=/var/log/celery/{{ celeryflower_application_name }}.log
+stdout_logfile={{ virtualenv_path }}/logs/{{ celeryflower_application_name }}.log
 redirect_stderr = true
