--- a/ansible/roles/db/templates/my.cnf.j2
+++ b/ansible/roles/db/templates/my.cnf.j2
@@ -33,13 +33,15 @@ skip-external-locking
 
 bind-address            = 127.0.0.1
 
-max_connections         = 30
+max_connections         = 5
 connect_timeout         = 5
 wait_timeout            = 600
 max_allowed_packet      = 1M
 sort_buffer_size        = 64K
 bulk_insert_buffer_size = 16M
-thread_stack            = 128K
+thread_stack            = 131072
+thread_cache_size       = 0
+host_cache_size         = 0
 
 myisam_recover          = BACKUP
 key_buffer_size         = 16K
@@ -47,11 +49,13 @@ open-files-limit        = 2000
 table_open_cache        = 4
 myisam_sort_buffer_size = 64K
 concurrent_insert       = 2
-read_buffer_size        = 256K
-read_rnd_buffer_size    = 1M
+read_buffer_size        = 64K
+read_rnd_buffer_size    = 64K
+
+tmp_table_size          = 256K
 
 query_cache_limit       = 64K
-query_cache_size        = 8M
+query_cache_size        = 2M
 
 log_warnings            = 2
 
@@ -63,8 +67,9 @@ max_binlog_size         = 100M
 
 default_storage_engine  = InnoDB
 
-innodb_buffer_pool_size = 256M
-innodb_log_buffer_size  = 8M
+innodb_buffer_pool_size = 256K
+innodb_sort_buffer_size = 64K
+innodb_log_buffer_size  = 256K
 innodb_file_per_table   = 1
 innodb_open_files       = 400
 innodb_io_capacity      = 400
