--- a/ansible/roles/base/templates/22-nginx.conf.j2
+++ b/ansible/roles/base/templates/22-nginx.conf.j2
@@ -1,14 +1,14 @@
 module(load="imfile" PollingInterval="10")
 
 input(type="imfile"
-      File="{{ virtualenv_path }}/logs/nginx_access.log"
+      File="{{ application_log_dir }}/nginx_access.log"
       Tag="nginx-access"
       Severity="info"
       StateFile="/var/spool/rsyslog/bongo_nginx_access"
       Facility="local7")
 
 input(type="imfile"
-      File="{{ virtualenv_path }}/logs/nginx_error.log"
+      File="{{ application_log_dir }}/nginx_error.log"
       Tag="nginx-error"
       Severity="error"
       StateFile="/var/spool/rsyslog/bongo_nginx_error"
