--- a/ansible/roles/base/templates/bongo_logrotate.j2
+++ b/ansible/roles/base/templates/bongo_logrotate.j2
@@ -1,4 +1,4 @@
-/var/log/nginx/*.log {{ virtualenv_path }}/logs/*.log {
+{{ application_log_dir }}/*.log {
     weekly
     missingok
     rotate 52
