--- a/ansible/roles/web/templates/nginx_site_config.j2
+++ b/ansible/roles/web/templates/nginx_site_config.j2
@@ -51,6 +51,23 @@ server {
         }
     }
 
+    location /tasks/ {
+        if (-f {{ virtualenv_path }}/maintenance_on.html) {
+            return 503;
+        }
+
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+
+        if (!-f $request_filename) {
+            rewrite /tasks/(.+) /$1 break;
+            proxy_pass http://127.0.0.1:9181;
+            break;
+        }
+    }
+
     # Error pages
     error_page 500 502 504 /500.html;
     location = /500.html {
