--- a/ansible/roles/web/templates/nginx_site_config.j2
+++ b/ansible/roles/web/templates/nginx_site_config.j2
@@ -6,6 +6,10 @@ upstream wsgi_server {
   server unix:{{ virtualenv_path }}/run/gunicorn.sock fail_timeout=0;
 }
 
+upstream rq_dashboard {
+    server 127.0.0.1:9181 fail_timeout=0;
+}
+
 server {
     listen      80;
     server_name {{ site_url }};
@@ -51,23 +55,6 @@ server {
         }
     }
 
-    location /tasks/ {
-        if (-f {{ virtualenv_path }}/maintenance_on.html) {
-            return 503;
-        }
-
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-
-        if (!-f $request_filename) {
-            rewrite /tasks/(.+) /$1 break;
-            proxy_pass http://127.0.0.1:9181;
-            break;
-        }
-    }
-
     # Error pages
     error_page 500 502 504 /500.html;
     location = /500.html {
@@ -77,5 +64,30 @@ server {
     error_page 503 /maintenance_on.html;
     location = /maintenance_on.html {
         root {{ virtualenv_path }}/;
+    }
+}
+
+upstream rq_dashboard {
+    server 127.0.0.1:9181 fail_timeout=0;
+}
+
+server {
+    listen 80;
+    server_name  rq.bjacobel.com; #rq.{{ site_url }};
+
+    # path for static files
+    root /none;
+
+    location / {
+        # checks for static file, if not found proxy to app
+        try_files $uri @proxy_to_app;
+    }
+
+    location @proxy_to_app {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+
+        proxy_pass   http://rq_dashboard;
     }
 }
