Connecting to Sauce and running tests

--- a/bongo/apps/frontend/templates/base.html
+++ b/bongo/apps/frontend/templates/base.html
@@ -15,7 +15,7 @@
         {% compress css %}
             <link type="text/x-scss" rel="stylesheet" href="{% static 'scss/main.scss' %}">
         {% endcompress %}
-        <script type="text/javascript" src="https:////use.typekit.com/rmt0nbm.js"></script>
+        <script type="text/javascript" src="https://use.typekit.com/rmt0nbm.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     </head>
     <body>
@@ -54,7 +54,7 @@
             <p class="browsehappy">Your browser is out of date and no longer supported. Please <strong><a href="http://browsehappy.com/">upgrade your browser</a></strong> to use bowdoinorient.com.</p>
         <![endif]-->
 
-        <div class="main-content">
+        <div class="main-content" id="main-content">
             {% block content %}{% endblock %}
         </div>
 
