Need to run rq-scheduler on production for tasks to get executed

--- a/ansible/roles/rq/templates/rq_start.j2
+++ b/ansible/roles/rq/templates/rq_start.j2
@@ -16,3 +16,7 @@ exec rqworker \
     --url {{ redis_url }} \
     --name rq \
     --sentry-dsn {{ raven_dsn }} \
+
+exec rqscheduler \
+    --host {{ redis_host }} \
+    --port {{ redis_port }} \
